# ncount

./: Cargo.toml  readme.md
benches/: collect.rs  filter_comments.rs
examples/: formatting.rs
resource/: sample.md
resources/: formatting.md  markdown.pest  sample.md  stats.txt
src/: app.rs  cli.rs  collector.rs  document.rs  error.rs  filter.rs  fmt.rs  format.rs  lex.rs  lib.rs  log.rs  main.rs  opt.rs  parse.rs  path.rs  split.rs  split_words.rs  stats.rs
src/collector/: filter.rs  heading.rs  stats.rs
src/fmt/: heading.rs
