[package]
name = "ncount"
version = "0.7.0"
edition = "2021"
authors = ["J/A <archer884@gmail.com>"]
license = "Unlicense"
keywords = ["novel", "word-count", "text"]
readme = "readme.md"
homepage = "https://github.com/archer884/ncount"
repository = "https://github.com/archer884/ncount"
categories = ["command-line-utilities", "text-processing"]
description = """
A word count tool intended to derive useful stats from markdown.
"""

[dependencies]
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
either = "1.9.0"
globwalk = "0.8.1"
regex = "1.10.2"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.10.1"

[profile.release]
lto = "thin"
# debug = true # used for flamegraph generation
