[package]
name = "ncount"
version = "0.7.1"
edition = "2021"
authors = ["J/A <archer884@gmail.com>"]
license = "Unlicense"
keywords = ["novel", "word-count", "text"]
readme = "readme.md"
homepage = "https://github.com/archer884/ncount"
repository = "https://github.com/archer884/ncount"
categories = ["command-line-utilities", "text-processing"]
description = """
A word count tool intended to derive useful stats from markdown.
"""

[dependencies]
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
either = "1.10.0"
globwalk = "0.8.1"
libsw = "3.3.1"
prettytable-rs = "0.10.0"
regex = "1.10.3"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.11.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
# debug = true # used for flamegraph generation
